// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders error 1`] = `
<div>
  <button
    class="css-99ntsi-Button"
  >
    Click me
  </button>
</div>
`;

exports[`<Button /> renders success 1`] = `
<div>
  <button
    class="css-gurlb7-Button"
  >
    Click me
  </button>
</div>
`;

exports[`<Button /> renders warning 1`] = `
<div>
  <button
    class="css-1k9sylq-Button"
  >
    Click me
  </button>
</div>
`;
